@@ -15,12 +15,12 @@ Feature: Radio Button Groups
   Scenario: Selecting grouped radio buttons by value
     When I select the "ched" radio button in the group
     Then the "ched" radio button should be selected in the group
-    Then the "emmen" radio button should not be selected
-    Then the "muen" radio button should not be selected
+    And the "emmen" radio button should not be selected
+    And the "muen" radio button should not be selected
     When I select the "muen" radio button in the group
     Then the "ched" radio button should not be selected
-    Then the "emmen" radio button should not be selected
-    Then the "muen" radio button should be selected in the group
+    And the "emmen" radio button should not be selected
+    And the "muen" radio button should be selected in the group
 
   Scenario: Getting an array of elements for each radio button in the group
     When I ask for the elements of a radio button group
